New methods to post data to login

--- a/bin/classes/.gitignore
+++ b/bin/classes/.gitignore
@@ -1,2 +1,61 @@
 /android/
 /chabingba/
+/.gitignore
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
