--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="9" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
