--- a/gen/.gitignore
+++ b/gen/.gitignore
@@ -1,2 +1,61 @@
 /android/
 /chabingba/
+/.gitignore
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
