Useing HttpClient to try to login
Made some code optimizations, but still can't post data to login.

--- a/bin/classes/.gitignore
+++ b/bin/classes/.gitignore
@@ -59,3 +59,399 @@
 /chabingba/
 /android/
 /chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/chabingba/
+/chabingba/
