--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="9" />
+        android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -22,6 +22,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SecondScreen"
+            android:label="SecondScreen" >
         </activity>
     </application>
 
