--- a/gen/.gitignore
+++ b/gen/.gitignore
@@ -59,3 +59,397 @@
 /chabingba/
 /android/
 /chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
+/android/
+/chabingba/
